# scatter

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
dependencies/: CMakeLists.txt
dependencies/umesimd/: README.md  UMEBasicTypes.h  UMEMemory.h  UMESimd.h  UMESimdInterface.h  UMESimdScalarEmulation.h  UMESimdScalarOperators.h  UMESimdTraits.h  UMESimdVectorEmulation.h
dependencies/umesimd/plugins/: UMESimdPluginARM.h  UMESimdPluginAVX.h  UMESimdPluginAVX2.h  UMESimdPluginAVX512.h  UMESimdPluginAltivec.h  UMESimdPluginKNC.h  UMESimdPluginOpenMP.h  UMESimdPluginScalarEmulation.h
dependencies/umesimd/plugins/altivec/float/: UMESimdVecFloat32_1.h  UMESimdVecFloat32_2.h  UMESimdVecFloat32_4.h  UMESimdVecFloat32_8.h  UMESimdVecFloat64_1.h  UMESimdVecFloat64_2.h  UMESimdVecFloatPrototype.h
dependencies/umesimd/plugins/altivec/int/: UMESimdVecInt32_2.h  UMESimdVecInt32_4.h  UMESimdVecInt32_8.h  UMESimdVecIntPrototype.h
dependencies/umesimd/plugins/altivec/mask/: UMESimdMask1.h  UMESimdMask2.h  UMESimdMask4.h  UMESimdMask8.h  UMESimdMaskPrototype.h
dependencies/umesimd/plugins/altivec/uint/: UMESimdVecUint32_1.h  UMESimdVecUint32_2.h  UMESimdVecUint32_4.h  UMESimdVecUint32_8.h  UMESimdVecUintPrototype.h
dependencies/umesimd/plugins/arm/float/: UMESimdVecFloat32_2.h  UMESimdVecFloat32_4.h  UMESimdVecFloat32_8.h  UMESimdVecFloat64_1.h  UMESimdVecFloat64_2.h  UMESimdVecFloatPrototype.h
dependencies/umesimd/plugins/arm/int/: UMESimdVecInt32_1.h  UMESimdVecInt32_2.h  UMESimdVecInt32_4.h  UMESimdVecInt32_8.h  UMESimdVecInt64_1.h  UMESimdVecInt64_2.h  UMESimdVecIntPrototype.h
dependencies/umesimd/plugins/arm/mask/: UMESimdMask1.h  UMESimdMask2.h  UMESimdMask4.h  UMESimdMask8.h  UMESimdMaskPrototype.h
dependencies/umesimd/plugins/arm/swizzle/: UMESimdSwizzlePrototype.h
dependencies/umesimd/plugins/arm/uint/: UMESimdVecUint32_2.h  UMESimdVecUint32_4.h  UMESimdVecUint32_8.h  UMESimdVecUint64_1.h  UMESimdVecUint64_2.h  UMESimdVecUintPrototype.h
dependencies/umesimd/plugins/avx/: UMESimdCastOperatorsAVX.h
dependencies/umesimd/plugins/avx/float/: UMESimdVecFloat32_1.h  UMESimdVecFloat32_16.h  UMESimdVecFloat32_2.h  UMESimdVecFloat32_32.h  UMESimdVecFloat32_4.h  UMESimdVecFloat32_8.h  UMESimdVecFloat64_1.h  UMESimdVecFloat64_16.h  UMESimdVecFloat64_2.h  UMESimdVecFloat64_4.h  UMESimdVecFloat64_8.h  UMESimdVecFloatPrototype.h
dependencies/umesimd/plugins/avx/int/: UMESimdVecInt32_1.h  UMESimdVecInt32_16.h  UMESimdVecInt32_2.h  UMESimdVecInt32_32.h  UMESimdVecInt32_4.h  UMESimdVecInt32_8.h  UMESimdVecInt64_1.h  UMESimdVecInt64_16.h  UMESimdVecInt64_2.h  UMESimdVecInt64_4.h  UMESimdVecInt64_8.h  UMESimdVecIntPrototype.h
dependencies/umesimd/plugins/avx/mask/: UMESimdMask1.h  UMESimdMask16.h  UMESimdMask2.h  UMESimdMask32.h  UMESimdMask4.h  UMESimdMask8.h  UMESimdMaskPrototype.h
dependencies/umesimd/plugins/avx/swizzle/: UMESimdSwizzle4.h  UMESimdSwizzlePrototype.h
dependencies/umesimd/plugins/avx/uint/: UMESimdVecUint32_1.h  UMESimdVecUint32_16.h  UMESimdVecUint32_2.h  UMESimdVecUint32_4.h  UMESimdVecUint32_8.h  UMESimdVecUint64_1.h  UMESimdVecUint64_2.h  UMESimdVecUintPrototype.h
dependencies/umesimd/plugins/avx2/: UMESimdCastOperatorsAVX2.h
dependencies/umesimd/plugins/avx2/float/: UMESimdVecFloat32_1.h  UMESimdVecFloat32_16.h  UMESimdVecFloat32_2.h  UMESimdVecFloat32_32.h  UMESimdVecFloat32_4.h  UMESimdVecFloat32_8.h  UMESimdVecFloat64_1.h  UMESimdVecFloat64_16.h  UMESimdVecFloat64_2.h  UMESimdVecFloat64_4.h  UMESimdVecFloat64_8.h  UMESimdVecFloatPrototype.h
dependencies/umesimd/plugins/avx2/int/: UMESimdVecInt32_1.h  UMESimdVecInt32_16.h  UMESimdVecInt32_2.h  UMESimdVecInt32_32.h  UMESimdVecInt32_4.h  UMESimdVecInt32_8.h  UMESimdVecInt64_1.h  UMESimdVecInt64_16.h  UMESimdVecInt64_2.h  UMESimdVecInt64_4.h  UMESimdVecInt64_8.h  UMESimdVecIntPrototype.h
dependencies/umesimd/plugins/avx2/mask/: UMESimdMask1.h  UMESimdMask16.h  UMESimdMask2.h  UMESimdMask32.h  UMESimdMask4.h  UMESimdMask8.h
dependencies/umesimd/plugins/avx2/uint/: UMESimdVecUint32_1.h  UMESimdVecUint32_16.h  UMESimdVecUint32_2.h  UMESimdVecUint32_4.h  UMESimdVecUint32_8.h  UMESimdVecUint64_4.h  UMESimdVecUintPrototype.h
dependencies/umesimd/plugins/avx512/: UMESimdCastOperatorsAVX512.h
dependencies/umesimd/plugins/avx512/float/: UMESimdVecFloat32_1.h  UMESimdVecFloat32_16.h  UMESimdVecFloat32_2.h  UMESimdVecFloat32_32.h  UMESimdVecFloat32_4.h  UMESimdVecFloat32_8.h  UMESimdVecFloat64_1.h  UMESimdVecFloat64_16.h  UMESimdVecFloat64_2.h  UMESimdVecFloat64_4.h  UMESimdVecFloat64_8.h  UMESimdVecFloatPrototype.h
dependencies/umesimd/plugins/avx512/int/: UMESimdVecInt32_1.h  UMESimdVecInt32_16.h  UMESimdVecInt32_2.h  UMESimdVecInt32_32.h  UMESimdVecInt32_4.h  UMESimdVecInt32_8.h  UMESimdVecInt64_1.h  UMESimdVecInt64_16.h  UMESimdVecInt64_2.h  UMESimdVecInt64_4.h  UMESimdVecInt64_8.h  UMESimdVecIntPrototype.h
dependencies/umesimd/plugins/avx512/mask/: UMESimdMask1.h  UMESimdMask16.h  UMESimdMask2.h  (+3 more)
dependencies/umesimd/plugins/knc/: UMESimdSwizzleKNC.h
dependencies/umesimd/plugins/scalar/: UMESimdCastOperatorsScalar.h
dependencies/umesimd/unittest/: UMESIMDUnitTest.cpp  UMEUnitTestCommon.h  UMEUnitTestSimd256b.cpp
src/: CMakeLists.txt  scatter.h
src/benchmarks/: benchmarks.cpp  benchmarks.h  indexsetgenerator.h  omp.cpp  omp_parallel.cpp  omp_serial.cpp  serial.cpp  serial_binning.cpp  serial_intr_simd.cpp  serial_ntstore.cpp  serial_omp_simd.cpp  serial_scan.cpp  serial_simd.cpp  serial_simple.cpp  serial_unrolled_loop.cpp  std_simple.cpp  stl.cpp  tbb_binning.cpp  tbb_presort.cpp  tbb_scan.cpp  tbb_simple.cpp
src/benchmarks/optimization/: omp_parallel.cpp  serial_scan.cpp  tbb_scan.cpp  tbb_simple.cpp
src/padscatter/: omp.h  omp_parallel.h  omp_serial.h  scatter.h  serial.h  serial_binning.h  serial_intr_simd.h  serial_ntstore.h  serial_omp_simd.h  serial_scan.h  serial_simd.h  serial_unrolled_loop.h  stl.h  tbb.h  tbb_binning.h  tbb_presort.h  tbb_scan.h
test/: CMakeLists.txt  tst_benchmark.cpp  tst_lazy_permutation.cpp  tst_scatter.cpp
(+106 files in other folders)
